# FullCycleShop

./: .gitignore  README.md  TODO  profiles.yml
DBTProject/DjangoMartDBT/: dbt_project.yml  (+1 more)
DagsterOrchestration/: README.md  pyproject.toml
DagsterOrchestration/src/DagsterOrchestration/defs/: assets.py  defs.py  ingestion_functions.py
DagsterOrchestration/src/DagsterOrchestration/metadata/: django_mart_tables.json
DjangoMart/: db.sqlite3
DjangoMartDBT/: .user.yml  dbt_project.yml
DjangoMartDBT/DjangoMartDagster/: pyproject.toml
DjangoMartDBT/DjangoMartDagster/DjangoMartDagster/: assets.py  common_constants.py  definitions.py  ingestion_functions.py  jobs.py  ops.py  schedules.py
DjangoMartDBT/DjangoMartDagster/DjangoMartDagster/DataIngestion/: ingestion_functions.py
DjangoMartDBT/DjangoMartDagster/DjangoMartDagster/DataScience/: sales_predictions.py  sales_predictions_training.py  utility.py
DjangoMartDBT/DjangoMartDagster/DjangoMartDagster/MachineLearning/: sales_constants.py  utility.py
DjangoMartDBT/DjangoMartDagster/DjangoMartDagster/MachineLearning/inference/: sales_inferance.py
DjangoMartDBT/DjangoMartDagster/DjangoMartDagster/MachineLearning/models/: daily_sales_LSTM_model.keras  daily_sales_sequential_model.keras
DjangoMartDBT/DjangoMartDagster/DjangoMartDagster/MachineLearning/scalers/: daily_sales_sequential_scaler.pkl
DjangoMartDBT/DjangoMartDagster/DjangoMartDagster/MachineLearning/training/: sales_predictions_training.py  utility.py
DjangoMartDBT/DjangoMartDagster/DjangoMartDagster/metadata/: django_mart_tables.json
(+195 files in other folders)
